# ncc

./: .gitignore  .gitmodules  CMakeLists.txt  index.d.ts  install.js  package-lock.json  package.json  readme.md
example/: index.js
src/: binding.cc  utils.cc  utils.h
src/bool/: bool.cc  bool.h  fuse.cc  fuse.h
src/brep/: bool.cc  brep.cc  builder.cc  builder.h  prime.cc  prime.h  primitive.cc
src/brep/bool/: bool.cc
src/brep/prime/: box.cc  box.h
src/mesh/: mesh.cc  mesh.h
src/step/: step.cc
src/tool/: mesh.cc
src/topo/: shape.cc  shape.h
test/: index.js  test.js
